Changes to be committed: 	modified:   backend/templates/dashboard.html
"This is a test"

--- a/backend/templates/dashboard.html
+++ b/backend/templates/dashboard.html
@@ -90,7 +90,7 @@
         <h3>Resources</h3>
         <a href="#">Library Resources</a>
         <a href="#">Study Materials</a>
-        <a href="#">Research Papers</a>
+        <a href="#">Papers</a>
     </div>
 </div>
 
