deleted:    .Backup Templates/templates/base.html 	deleted:    .Backup Templates/templates/home.html 	deleted:    .Backup Templates/templates/login.html 	deleted:    .Backup Templates/templates/registration/admin _form.html 	deleted:    .Backup Templates/templates/registration/admin_confirm_delete.html 	deleted:    .Backup Templates/templates/registration/admin_list.html 	deleted:    .Backup Templates/templates/registration/assign_grade.html 	deleted:    .Backup Templates/templates/registration/available_courses.html 	deleted:    .Backup Templates/templates/registration/course_confirm_delete.html 	deleted:    .Backup Templates/templates/registration/course_form.html 	deleted:    .Backup Templates/templates/registration/course_list.html 	deleted:    .Backup Templates/templates/registration/course_students.html 	deleted:    .Backup Templates/templates/registration/edit_course.html 	deleted:    .Backup Templates/templates/registration/enroll_in_course.html 	deleted:    .Backup Templates/templates/registration/manage_classes.html 	deleted:    .Backup Templates/templates/registration/manage_grades.html 	deleted:    .Backup Templates/templates/registration/professor_confirm_delete.html 	deleted:    .Backup Templates/templates/registration/professor_form.html 	deleted:    .Backup Templates/templates/registration/professor_list.html 	deleted:    .Backup Templates/templates/registration/professor_schedule.html 	deleted:    .Backup Templates/templates/registration/register.html 	deleted:    .Backup Templates/templates/registration/student_confirm_delete.html 	deleted:    .Backup Templates/templates/registration/student_detail.html 	deleted:    .Backup Templates/templates/registration/student_form.html 	deleted:    .Backup Templates/templates/registration/student_list.html 	deleted:    .Backup Templates/templates/registration/student_schedule.html 	deleted:    .Backup Templates/templates/registration/view_enrollments.html 	deleted:    .Backup Templates/templates/registration/v

--- a/backend/templates/course_overview.html
+++ b/backend/templates/course_overview.html
@@ -10,7 +10,7 @@
             {% for assignment in assignments %}
             <li class="assignment-item">
                 <span class="assignment-title">{{ assignment.title }}</span> - 
-                <span class="assignment-due">Due: {{ assignment.due_date|date:"F j, Y, g:i a" }}</span>
+<span class="assignment-due">Due: {{ assignment.due_date|date:"F j, Y" }}</span>
             </li>
             {% endfor %}
         </ul>
