modified:   backend/registration/__pycache__/urls.cpython-312.pyc 	modified:   backend/registration/__pycache__/views.cpython-312.pyc 	modified:   backend/registration/urls.py 	modified:   backend/registration/views.py 	new file:   backend/templates/enroll_sidebar.html 	new file:   backend/templates/financials.html 	new file:   backend/templates/my_requirements.html 	modified:   backend/templates/registration/student_schedule.html 	new file:   backend/templates/shopping_cart.html

--- a/backend/templates/registration/student_schedule.html
+++ b/backend/templates/registration/student_schedule.html
@@ -8,34 +8,34 @@
         <!-- Sidebar Navigation Buttons -->
         <div class="sidebar-nav">
             <div class="nav-item-box">
-                <div class="nav-item">
+                <a href="{% url 'student_schedule' %}" class="nav-item">
                     <span class="icon">📅</span>
                     <span>My Schedule</span>
-                </div>
+                </a>
             </div>
             <div class="nav-item-box">
-                <div class="nav-item">
+                <a href="{% url 'shopping_cart' %}" class="nav-item">
                     <span class="icon">🛒</span>
                     <span>Shopping Cart</span>
-                </div>
+                </a>
             </div>
             <div class="nav-item-box">
-                <div class="nav-item">
+                <a href="{% url 'available_courses' %}" class="nav-item">
                     <span class="icon">🗂</span>
                     <span>Enrollment</span>
-                </div>
+                </a>
             </div>
             <div class="nav-item-box">
-                <div class="nav-item">
+                <a href="{% url 'my_requirements' %}" class="nav-item">
                     <span class="icon">📋</span>
                     <span>My Requirements</span>
-                </div>
+                </a>
             </div>
             <div class="nav-item-box">
-                <div class="nav-item">
+                <a href="{% url 'financials' %}" class="nav-item">
                     <span class="icon">💵</span>
                     <span>Financials</span>
-                </div>
+                </a>
             </div>
         </div>
     </div>
