modified:   To do list.txt 	modified:   backend/registration/__pycache__/forms.cpython-312.pyc 	modified:   backend/registration/__pycache__/models.cpython-312.pyc 	modified:   backend/registration/__pycache__/urls.cpython-312.pyc 	modified:   backend/registration/__pycache__/views.cpython-312.pyc 	modified:   backend/registration/forms.py 	modified:   backend/registration/migrations/0001_initial.py 	deleted:    backend/registration/migrations/0002_alter_enrollment_grade.py 	renamed:    backend/registration/migrations/0012_submission.py -> backend/registration/migrations/0002_cart.py 	deleted:    backend/registration/migrations/0003_alter_enrollment_unique_together.py 	deleted:    backend/registration/migrations/0004_alter_enrollment_grade.py 	deleted:    backend/registration/migrations/0005_rename_instructor_course_professor.py 	deleted:    backend/registration/migrations/0006_alter_course_professor.py 	deleted:    backend/registration/migrations/0007_course_capacity.py 	deleted:    backend/registration/migrations/0008_alter_course_available_seats.py 	deleted:    backend/registration/migrations/0009_alter_course_professor.py 	deleted:    backend/registration/migrations/0010_profile_dark_mode_profile_font_size_and_more.py 	deleted:    backend/registration/migrations/0011_announcement_assignment.py 	deleted:    backend/registration/migrations/0013_announcement_due_date_announcement_due_time_and_more.py 	deleted:    backend/registration/migrations/0014_course_semester_alter_course_end_date_and_more.py 	modified:   backend/registration/migrations/__pycache__/0001_initial.cpython-312.pyc 	new file:   backend/registration/migrations/__pycache__/0002_cart.cpython-312.pyc 	new file:   backend/registration/migrations/__pycache__/0015_course_course_code.cpython-312.pyc 	new file:   backend/registration/migrations/__pycache__/0016_alter_course_course_code.cpython-312.pyc 	new file:   backend/registration/migrations/__pycache__/0017_remove_course_course_code.cpython-312.pyc 	n

--- a/backend/templates/registration/course_form.html
+++ b/backend/templates/registration/course_form.html
@@ -4,6 +4,10 @@
 <form method="post" class="course-form">
     {% csrf_token %}
     <div class="form-group">
+        {{ form.course_code.label_tag }}<br>
+        {{ form.course_code }}
+    </div>
+    <div class="form-group">
         {{ form.name.label_tag }}<br>
         {{ form.name }}
     </div>
@@ -54,6 +58,10 @@
     <div class="form-group">
         {{ form.credits.label_tag }}<br>
         {{ form.credits }}
+    </div>
+    <div class="form-group">
+        {{ form.semester.label_tag }}<br>
+        {{ form.semester }}
     </div>
     <button type="submit" class="btn btn-primary">Save</button>
 </form>
